# itu-sync

./: .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/itu_sync/: __init__.py  __main__.py  catalog.py  cli.py  config.py  doctypes.py  ftps.py  language.py  output.py  paths.py  select.py  sync.py  types.py
tests/: conftest.py  test_catalog.py  test_cli.py  test_config.py  test_ftps.py  test_language.py  test_output.py  test_paths.py  test_sync.py
tests/fixtures/: ITU-R_Meetings.xml  ITU-T_Meetings.xml  T25-SG12-250909-TD.xml
