[project]
name = "itu-sync"
version = "0.2.1"
description = "Sync ITU meeting documents from the terminal over implicit FTPS"
readme = "README.md"
authors = [
    { name = "Werner Robitza", email = "werner.robitza@gmail.com" }
]
license = "MIT"
license-files = ["LICENSE.md"]
requires-python = ">=3.10"
keywords = ["itu", "ftps", "sync", "documents", "ties"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Telecommunications Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications",
]
dependencies = [
    "click>=8.1",
    "keyring>=25.0",
    "questionary>=2.0",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/slhck/itu-sync"
Repository = "https://github.com/slhck/itu-sync"

[project.scripts]
itu-sync = "itu_sync.cli:main"

[build-system]
requires = ["uv_build>=0.9,<1.0.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.0",
    "pytest>=8.0",
    "ruff>=0.15.0",
    "ty>=0.0.1a7",
]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
